# workflow-testing

./: deploy.yaml  pylintrc  pyproject.toml  verify.yaml
.github/actions/: init-runtime.yaml
.github/actions/init-runtime/: action.yaml
.github/workflows/: publish.yaml  verify.yaml
docker/: Dockerfile  entrypoint.sh
scripts/: lint.sh  test.sh
tests/: test_main.py
workflow/: __init__.py
