[tool.poetry]
name = "workflow-testing"
version = "0.1.0"
description = ""
authors = ["Erik Nelson <erik@nsk.io>"]
readme = "README.md"
packages = [{include = "workflow_testing"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pylint = "^2.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
